--- a/style.css
+++ b/style.css
@@ -1,46 +1,50 @@
-* {box-sizing: border-box; margin: 0;}
-.video-container{
-    margin-top: 10rem; 
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
-.header__img {
-    width: 60px;
-    
-}
-.header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    padding: 2rem;
-    
-    
-}
-.nav-bar {
-    gap: 1rem;
-    list-style-type: none;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
 
+.video-container {
+  margin-top: 10rem;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.nav-bar a{
-    text-decoration: none;
+
+.header__img {
+  width: 60px;
 }
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  padding: 2rem;
+}
+
+.nav-bar {
+  gap: 1rem;
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-bar a {
+  text-decoration: none;
+}
+
 .form {
-    height: 100vh;
-    margin-top: 10rem;
+  height: 100vh;
+  margin-top: 10rem;
 }
+
 @media screen and (max-width: 768px) {
-    .nav-bar {
-        flex-direction: column;
-        
-    }
-    
+  .nav-bar {
+    flex-direction: column;
+  }
 }
